--- a/contract/package.json
+++ b/contract/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "hardhat_tut",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy" : "npx hardhat run scripts/deploy.js --network localhost",
+    "start" : "npx hardhat node"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.18"
